src/objects/OrderApi__Batch__c.object
<CustomObject>
    <description>Batch receipts to improve and faciliate bank reconcilation.</description>
    <fields>
        <fullName>OrderApi__Actual_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated** The sum (amount) of entries entered for the batch.</description>
        <inlineHelpText>**System Calculated** The sum (amount) of entries entered for the batch.</inlineHelpText>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Actual_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated** The current number of entries entered for the batch.</description>
        <inlineHelpText>**System Calculated** The current number of entries entered for the batch.</inlineHelpText>
        <label>Actual Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Batch_Number__c</fullName>
        <description>**Auto Calculated** Auto incrementing number. (External Id)</description>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>**Auto Calculated** Auto incrementing number. (External Id)</inlineHelpText>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** Link to the related Business Group from the Batch inherited from the current user&apos;s assigned Business Group if not defined on record creation.</description>
        <inlineHelpText>**System Calculated/Override/Required** Link to the related Business Group from the Batch inherited from the current user&apos;s assigned Business Group if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Closed_Date__c</fullName>
        <description>The date the Batch was closed and assessed as Ready to Post.</description>
        <inlineHelpText>The date the Batch was closed and assessed as Ready to Post.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>The date to use as the default Date for related Receipts.</description>
        <inlineHelpText>The date to use as the default Date for related Receipts.</inlineHelpText>
        <label>Default Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deposit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** The GL account related to the deposit account (bank) for the batch.</description>
        <inlineHelpText>**System Calculated/Override/Required** The GL account related to the deposit account (bank) for the batch.</inlineHelpText>
        <label>Deposit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>Select a default Entity for related Receipts to the Batch.</description>
        <inlineHelpText>Select a default Entity for related Receipts to the Batch.</inlineHelpText>
        <label>Default Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Expected_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**Required** The expected sum (amount) of entries for the batch.</description>
        <inlineHelpText>**Required** The expected sum (amount) of entries for the batch.</inlineHelpText>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Expected_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**Required** The expected number of entries for the batch.</description>
        <inlineHelpText>**Required** The expected number of entries for the batch.</inlineHelpText>
        <label>Expected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the batch is considered closed and the system will restrict users (without special permissions assigned to their profile) from editing the batch or entries associated with the batch.</description>
        <inlineHelpText>When checked the batch is considered closed and the system will restrict users (without special permissions assigned to their profile) from editing the batch or entries associated with the batch.</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, related receipts are posted to Transactions.</description>
        <inlineHelpText>When checked, related receipts are posted to Transactions.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Item to use as &quot;Default&quot; for related Batch Receipts. (Available in Batch UI only)</description>
        <inlineHelpText>Link to related Item to use as &quot;Default&quot; for related Batch Receipts. (Available in Batch UI only)</inlineHelpText>
        <label>Default Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Opened_Date__c</fullName>
        <description>The date the Batch was opened.</description>
        <inlineHelpText>The date the Batch was opened.</inlineHelpText>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Payment Gateway assigned to the Batch (for online transactions and offline entry of transactions)</description>
        <inlineHelpText>Link to the Payment Gateway assigned to the Batch (for online transactions and offline entry of transactions)</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Type__c</fullName>
        <description>Select the Payment Type for the Batch.</description>
        <inlineHelpText>Select the Payment Type for the Batch.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>The date the Batch was posted.</description>
        <inlineHelpText>The date the Batch was posted.</inlineHelpText>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Code to set by default on cash entries created from the Batch.</description>
        <inlineHelpText>Source Code to set by default on cash entries created from the Batch.</inlineHelpText>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Batch_Number__c</columns>
        <columns>OrderApi__Deposit_Account__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Source_Code__c</columns>
        <columns>OrderApi__Actual_Count__c</columns>
        <columns>OrderApi__Actual_Amount__c</columns>
        <columns>OrderApi__Expected_Count__c</columns>
        <columns>OrderApi__Expected_Amount__c</columns>
        <columns>OrderApi__Is_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>